objects/SubProject__c.object
<CustomObject>
    <description>Subproject contains project information related to project type and/or product(s), as well as milestones, project logs and additional details;  rolls up to the Project.</description>
    <fields>
        <fullName>Age_in_Days__c</fullName>
        <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Convert__c</fullName>
        <description>Field to convert picklist value to a text value</description>
        <formula>TEXT( SubProject_Region__c )</formula>
        <inlineHelpText>None needed - not on page layout</inlineHelpText>
        <label>BU Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_PMC__c</fullName>
        <formula>IF( PMC_Convert__c = &quot;Region&quot;,  BU_Convert__c, BU_Convert__c&amp;(&quot;-&quot; &amp;PMC_Convert__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU-PMC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Alignment_Workshop_Date__c</fullName>
        <label>Business Alignment Workshop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Unit Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buy_Sell_Clone_Type__c</fullName>
        <label>Buy-Sell Clone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Clone - Multi-Company to Single Company Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone - Q-Pointer Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone - Single Company to Multi-Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clone - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Renumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Merge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logon Rename</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - see Special Instructions</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMF_Numbers__c</fullName>
        <label>CMF Number(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSI_Survey__c</fullName>
        <label>CSI Survey %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CTI_Desktop__c</fullName>
        <label>CTI Desktop</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Intro_Call_15__c</fullName>
        <formula>IF( ISBLANK( Client_Intro_Call_Conducted__c ) ,null,  Client_Intro_Call_Conducted__c  -  Contract_Roll_Called__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Intro Call (&lt;=15)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Intro_Call_Conducted__c</fullName>
        <label>Client Intro Call Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Input scope details and notes (i.e. HOLD information, contacts w/o workspace, etc.)</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Details__c</fullName>
        <label>Contract Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Call_10__c</fullName>
        <formula>IF(  ISBLANK( Contract_Review_Call_Conducted__c ), 0 , Contract_Review_Call_Conducted__c  -  Contract_Roll_Called__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Review Call (&lt;=10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Call_Conducted__c</fullName>
        <label>Contract Review Call Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Roll_Called__c</fullName>
        <label>Contract Roll Called</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_of_Activities_on_SubProject__c</fullName>
        <description>Represents the total of grandchild Project Activities on the subproject.</description>
        <label>Count of Activities on SubProject</label>
        <summarizedField>Project_Milestone__c.Total_Activities__c</summarizedField>
        <summaryForeignKey>Project_Milestone__c.SubProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Discovery_Wbks_on_SubProject__c</fullName>
        <description>Rollup of all the Discovery Workbook records on a subproject</description>
        <label>Count of Discovery Wbks on SubProject</label>
        <summaryForeignKey>Site_Workbook__c.SubProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_MAT_on_SubProject__c</fullName>
        <description>Represents the total count of milestone, activity, and task records on the subproject.</description>
        <formula>Count_of_Milestones_on_SubProject__c +  Count_of_Activities_on_SubProject__c +  Count_of_Tasks_on_SubProject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of MAT on SubProject</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Milestones_on_SubProject__c</fullName>
        <description>Rolup field to display the number of Milestone records on a SubProject</description>
        <label>Count of Milestones on SubProject</label>
        <summaryForeignKey>Project_Milestone__c.SubProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_SubProject_Sites__c</fullName>
        <label>Count of SubProject Sites</label>
        <summaryForeignKey>SubProjectSite__c.SubProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Tasks_on_SubProject__c</fullName>
        <description>Represents the total of great grandchild Project Tasks on the subproject.</description>
        <label>Count of Tasks on SubProject</label>
        <summarizedField>Project_Milestone__c.Total_Tasks__c</summarizedField>
        <summaryForeignKey>Project_Milestone__c.SubProject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>D_A_Status__c</fullName>
        <label>D&amp;A Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_PMC_Assigned__c</fullName>
        <description>The date that the PMC field was updated from &quot;region&quot; to another value</description>
        <inlineHelpText>This field is read-only but updated when the PMC field is changes from Region to any other value</inlineHelpText>
        <label>Date PMC Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Sold__c</fullName>
        <label>Days Sold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Used__c</fullName>
        <label>Days Used</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Id__c</fullName>
        <label>Deal Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Phone__c</fullName>
        <label>Dealership Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Does_Report_To_Me__c</fullName>
        <formula>(NOT(ISBLANK( Manager_Id_Of_Project_Manager__c )) &amp;&amp; ( Manager_Id_Of_Project_Manager__c == $User.Id))
|| (NOT(ISBLANK( Manager_Id_Of_Manager__c )) &amp;&amp; ( Manager_Id_Of_Manager__c == $User.Id))</formula>
        <label>Does Report To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Status__c</fullName>
        <label>ER Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Install_Date_EID__c</fullName>
        <label>Estimated Install Date (EID)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_PSR_sent_to_Client__c</fullName>
        <label>Final PSR sent to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forms_45__c</fullName>
        <formula>IF( ISBLANK( Forms_Received__c ) , 0 ,  Estimated_Install_Date_EID__c  -  Forms_Received__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forms (&gt;=45)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forms_Received__c</fullName>
        <label>Forms Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HW_NW_Installed__c</fullName>
        <label>HW/NW Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H_W_20__c</fullName>
        <formula>IF( ISBLANK( HW_NW_Installed__c ) , 0 ,  Estimated_Install_Date_EID__c  -  HW_NW_Installed__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>H/W (&gt;=20)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H_W_Specialist_PFW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>H/W Specialist (PFW)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubProjects_HW_Specialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Heavy_Equipment_Manufacturer_Franchise__c</fullName>
        <label>Heavy Equipment Manufacturer/Franchise</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_90__c</fullName>
        <formula>IF( ISBLANK( Project_Plan_Delivered_to_Client__c ) , 0 ,  Estimated_Install_Date_EID__c  -  Project_Plan_Delivered_to_Client__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPP (&gt;=90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Folders__c</fullName>
        <description>Link to Folder Structure to save documents.</description>
        <label>Impact Folders Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Impact_Project_Numbers__c</fullName>
        <label>Impact Project Number(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Start_Date_Migration_Date__c</fullName>
        <label>Install Start Date / Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Project_Managed_By_Me__c</fullName>
        <formula>NOT(ISBLANK( SubProject_Manager_Id__c )) &amp;&amp; ( SubProject_Manager_Id__c == $User.Id)</formula>
        <label>Is Project Managed By Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lag_Time_to_Install__c</fullName>
        <formula>IF( ISBLANK( Estimated_Install_Date_EID__c ) , 0 ,  Estimated_Install_Date_EID__c  -  Contract_Roll_Called__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lag Time to Install</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MS_Project_Workspace__c</fullName>
        <label>MS Project Workspace Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Manager_Id_Of_Manager__c</fullName>
        <formula>Project_Manager__r.Manager.ManagerId</formula>
        <label>Manager Id Of Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Id_Of_Project_Manager__c</fullName>
        <formula>Project_Manager__r.ManagerId</formula>
        <label>Manager Id Of Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>Dash - Small Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive - Baseline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightspeed - Powersports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW - Heavy Equipment</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Tot_Rec_Threshold_Override__c</fullName>
        <description>To enable a CDK admin to supply an override value for records that prove to be “exceptions” (i.e. “outliers”) to the general rule</description>
        <label>Max Tot Rec Threshold Override</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Milestone_Count__c</fullName>
        <label>Milestone Count</label>
        <summaryForeignKey>Project_Milestone__c.SubProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Milestones_Auto_Generated_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag if Standard Milestones are created for the SubProject</description>
        <label>Milestones Auto Generated Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Certified__c</fullName>
        <label>Network Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooftops__c</fullName>
        <label>Number of Rooftops</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_User_Connections__c</fullName>
        <label>Number of User Connections</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFW_Verification_Meeting_Conducted__c</fullName>
        <label>PFW Verification Meeting Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_Convert__c</fullName>
        <description>Store PMC value as text</description>
        <formula>TEXT( Project_Management_Center__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>None won&apos;t be on page</inlineHelpText>
        <label>PMC Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Email__c</fullName>
        <formula>Project_Manager__r.Email</formula>
        <label>PM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Phone__c</fullName>
        <formula>Project_Manager__r.Phone</formula>
        <label>PM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_GoLive_Mtg_Client_10__c</fullName>
        <formula>IF( ISBLANK( Pre_GoLive_Mtg_Client_Conducted__c ) , 0 ,  Estimated_Install_Date_EID__c  -  Pre_GoLive_Mtg_Client_Conducted__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-GoLive Mtg (Client) (&lt;=10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_GoLive_Mtg_Client_Conducted__c</fullName>
        <label>Pre-GoLive Mtg (Client) Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_GoLive_Mtg_Internal_20__c</fullName>
        <formula>IF( ISBLANK(  Pre_GoLive_Mtg_Internal_Conducted__c  ) , 0 ,  Estimated_Install_Date_EID__c  -  Pre_GoLive_Mtg_Internal_Conducted__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-GoLive Mtg (Internal) (&gt;=20)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_GoLive_Mtg_Internal_Conducted__c</fullName>
        <label>Pre-GoLive Mtg (Internal) Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Install_Training_80__c</fullName>
        <label>Pre-Install Training (&gt;=80%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_System__c</fullName>
        <description>This field is to indicate the previous system (if applicable) for the client</description>
        <inlineHelpText>Previous system for the client.  Use this field to indicate the client&apos;s previous system - whether a CDK system and/or a competitor</inlineHelpText>
        <label>Previous System</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Discovery_Meeting_30__c</fullName>
        <formula>IF( ISBLANK( Process_Discovery_Mtg_Conducted__c ) , 0 ,  Process_Discovery_Mtg_Conducted__c  -  Contract_Roll_Called__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Discovery Meeting (&lt;=30)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Discovery_Mtg_Conducted__c</fullName>
        <label>Process Discovery Mtg Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Overview_Meeting_Conducted__c</fullName>
        <label>Process Overview Meeting Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Assigned_to_PM_PS__c</fullName>
        <label>Project Assigned to PM/PS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Close_20__c</fullName>
        <formula>IF( ISBLANK( Final_PSR_sent_to_Client__c ) , 0 ,  Final_PSR_sent_to_Client__c  -  Transition_Meeting_Conducted__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Close (&lt;=20)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Kick_Off_Mtg_Internal_90__c</fullName>
        <formula>IF( ISBLANK( Project_Kick_Off_Mtg_Internal__c ) , 0 ,  Estimated_Install_Date_EID__c  -  Project_Kick_Off_Mtg_Internal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Kick-Off Mtg (Internal) (&gt;=90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Kick_Off_Mtg_Internal__c</fullName>
        <label>Project Kick-Off Mtg (Internal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Management_Center__c</fullName>
        <label>Project Management Center</label>
        <picklist>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augusta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford SMARTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubProjectsMgrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager_s_Manager__c</fullName>
        <description>field to display the project manager&apos;s manager</description>
        <formula>Project_Manager__r.Manager.FirstName &amp; &quot; &quot; &amp;  Project_Manager__r.Manager.LastName</formula>
        <inlineHelpText>This is an automated field to have the assigned project manager&apos;s manager name</inlineHelpText>
        <label>Project Manager&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Step 1 - Discovery (Pre-Sales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 1 - Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 2 - Project Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 3 - Site Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 4 - CDK GoLive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 5 - Transition Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 6 - Ongoing Training (Closed)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Delivered_to_Client__c</fullName>
        <label>Project Plan Delivered to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_SubType__c</fullName>
        <label>Project SubType</label>
        <picklist>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK CRM - Concurrent with DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK CRM Reverse Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK CRM Stongmail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Desking Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK DriveXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK F&amp;I (CA Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Vehicle Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Lead Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Wizard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Wizard Front Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction Management (CSM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Pencil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Archiving (DA)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy / Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>SubProjects</relationshipLabel>
        <relationshipName>SubProjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RAR__c</fullName>
        <label>RAR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request_RMS_Approved__c</fullName>
        <label>Resource Request (RMS) Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Request_RMS_Submitted__c</fullName>
        <label>Resource Request (RMS) Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <formula>ISPICKVAL(Project_Type__c,&quot;Unhook&quot;) &amp;&amp; ( Estimated_Install_Date_EID__c  -  Contract_Roll_Called__c ) &lt; 120</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>High-level text description of the project</description>
        <label>Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Project_Type__c</fullName>
        <label>Secondary Project Type</label>
        <picklist>
            <controllingField>Project_Type__c</controllingField>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Buy-Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rush (&lt;30 Days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box / Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box w/Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Only / Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS Only Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Merge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specify_Other__c</fullName>
        <label>Specify Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Health_Indicator__c</fullName>
        <label>SubProject Health Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubProject_Manager_Id__c</fullName>
        <formula>Project_Manager__c</formula>
        <label>SubProject Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Name__c</fullName>
        <label>SubProject Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Overview__c</fullName>
        <label>SubProject Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>